Implement m2m relation for product_articles
