# api/docs/swagger.json
@@ -436,7 +436,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/product.Product"
+                                "$ref": "#/definitions/product.ProductArticle"
                             }
                         }
                     }
@@ -454,7 +454,7 @@
                     "products"
                 ],
                 "summary": "Create a article with given data",
-                "operationId": "create-article",
+                "operationId": "create-product",
                 "parameters": [
                     {
                         "description": "Product",
@@ -963,6 +963,12 @@
         "product.Product": {
             "type": "object",
             "properties": {
+                "articles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product.Article"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -970,6 +976,29 @@
                     "type": "integer"
                 },
                 "price": {
+                    "type": "integer"
+                },
+                "sku": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "product.ProductArticle": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "productID": {
+                    "type": "integer"
+                },
+                "quantity": {
                     "type": "integer"
                 },
                 "sku": {
